--- a/index.html
+++ b/index.html
@@ -11,30 +11,47 @@
             <h1>Favourite Anime chracters</h1>
         </header>
         <main class="main-container">
-            <div class="profile1">
+            <div class="character1">
+                <div class="profile1">
                 <h2>Chracter 1</h2>
                 <img src="img/FinalBeastGohan.webp" alt="Character 1"/>
                 <p>Gohan is the son of Goku and Chi-Chi, and the eldest child of the couple. He is a Saiyan hybrid, possessing immense potential and power.</p>
+            </div>
+                <div class="container-one">
+                    <button id="toggle1">Toggle Profile</button>
+                </div> 
                 </div>
-            <button id="toggle1">Toggle Profile</button>
-            <div class="profile2">
+            <div class="character2">
+                <div class="profile2">
+
                 <h2>Character 2</h2>
                 <img src="img/Naruto_Part_III.webp" alt="Character 2"/>
                 <p>Naruto Uzumaki is a shinobi of Konohagakure. He is the son of the Fourth Hokage, Minato Namikaze, and the Nine-Tails' jinchūriki.</p>
                 </div>
-                <button id="toggle2">Toggle Profile 2</button>
+                <div class="container-two">
+                    <button id="toggle2">Toggle Profile 2</button>
+                    </div>
+            </div>
+                <div class="chracter3">
                 <div class="profile3">
-                <h2>Character 3</h2>
-                <img src="img/Monkey_D._Luffy_Anime_Post_Timeskip_Infobox.webp" alt="Character 3"/>
-                <p>Monkey D. Luffy is the main protagonist of the One Piece series. He is the captain of the Straw Hat Pirates and a former member of the Worst Generation.</p> 
+                    <h2>Character 3</h2>
+                    <img src="img/Monkey_D._Luffy_Anime_Post_Timeskip_Infobox.webp" alt="Character 3"/>
+                    <p>Monkey D. Luffy is the main protagonist of the One Piece series. He is the captain of the Straw Hat Pirates and a former member of the Worst Generation.</p> 
+                    </div>
+                    <div class="containr-three">
+                        <button id="toggle3">Toggle Profile 3</button>
+                    </div>
                 </div>
-                <button id="toggle3">Toggle Profile 3</button>
                 <div class="profile4">
-                <h2>Character 4</h2>
-                <img src="img/Edward09.webp" alt="Character 4"/>
-                <p>Edward Elric is the youngest son of Trisha and Hohenheim Elric. He is a State Alchemist and the titular character of the series.</p>
-                </div>
-                <button id="toggle4">Toggle Profile 4</button>
+                    <div class="profile4">
+                        <h2>Character 4</h2>
+                        <img src="img/Edward09.webp" alt="Character 4"/>
+                        <p>Edward Elric is the youngest son of Trisha and Hohenheim Elric. He is a State Alchemist and the titular character of the series.</p>
+                    </div>
+                <div class="container-four">
+                    <button id="toggle4">Toggle Profile 4</button>
+                </div>  
+                </div>   
         </main>
         <script src="js/index.js"></script>
     </body>
